--- a/NG-Wakanda-Pack/WebFolder/demos/bootstrap/styles.css
+++ b/NG-Wakanda-Pack/WebFolder/demos/bootstrap/styles.css
@@ -1,4 +1,7 @@
-tbody {display:block; overflow-y:auto; height:400px; right:0px; }
+body {
+	overflow:hidden;
+}
+tbody {display:block; overflow-y:auto; height:600px; right:0px; }
 tr {display:block; height:40px; right:0px; }
 td {display:block; height:40px; right:0px; }
 .panel {height: 780px;}
